--- a/package.json
+++ b/package.json
@@ -9,7 +9,9 @@
   },
   "dependencies": {
     "core-js": "^3.8.3",
-    "vue": "^2.6.14"
+    "vue": "^2.6.14",
+    "vue-flatpickr-component": "^8.1.8",
+    "vue2-highcharts": "^1.2.5"
   },
   "devDependencies": {
     "@babel/core": "^7.12.16",
@@ -19,6 +21,9 @@
     "@vue/cli-service": "~5.0.0",
     "eslint": "^7.32.0",
     "eslint-plugin-vue": "^8.0.3",
+    "node-sass": "^9.0.0",
+    "sass": "^1.62.1",
+    "sass-loader": "^13.3.1",
     "vue-template-compiler": "^2.6.14"
   },
   "eslintConfig": {
